<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/sshoudong_title" />

    <View style="@style/LineStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/cbackground_gray" />

    <RelativeLayout
        android:id="@+id/ashoudong_co2_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/setting_item_bg"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sshoudong_co2"
            android:textColor="#000"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="@dimen/dsetting_back_icon_size"
            android:layout_height="@dimen/dsetting_back_icon_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/gengduo" />
    </RelativeLayout>

    <View
        style="@style/LineStyle"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:id="@+id/ashoudong_light_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/setting_item_bg"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sshoudong_light"
            android:textColor="#000" />

        <ImageView
            android:layout_width="@dimen/dsetting_back_icon_size"
            android:layout_height="@dimen/dsetting_back_icon_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/gengduo" />
    </RelativeLayout>

    <View
        style="@style/LineStyle"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:id="@+id/ashoudong_air_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/setting_item_bg"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sshoudong_air"
            android:textColor="#000" />

        <ImageView
            android:layout_width="@dimen/dsetting_back_icon_size"
            android:layout_height="@dimen/dsetting_back_icon_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/gengduo" />
    </RelativeLayout>

    <View
        style="@style/LineStyle"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:id="@+id/ashoudong_tu_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/setting_item_bg"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sshoudong_tu"
            android:textColor="#000" />

        <ImageView
            android:layout_width="@dimen/dsetting_back_icon_size"
            android:layout_height="@dimen/dsetting_back_icon_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/gengduo" />
    </RelativeLayout>

    <View
        style="@style/LineStyle"
        android:layout_marginLeft="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cbackground_gray" />


</LinearLayout>